[metadata]
name = adder
version = 0.2
description = Knows how to calculate 1 + 1
long_description = file: README.md
long_description_content_type = text/markdown
author = Dominic Kempf
author_email = ssc@iwr.uni-heidelberg.de
license = MIT License
license_file = LICENSE.md
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    numpy
